--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.56.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "chartjs-plugin-datalabels": "^2.2.0"
     }
 }
